--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,6 @@
     border: 2px solid #eee;
     border-radius: 10px;
     padding: 15px;
-    padding-bottom: 5px;
     margin: 0 auto;
 }
 
@@ -18,6 +17,11 @@
 #footer a {
     color: #aaa;
     text-decoration: none;
+}
+
+#footer a:hover {
+    color: #aaa;
+    text-decoration: underline;
 }
 
 div.msg_time {
@@ -116,6 +120,7 @@ div.note {
 
 #add_message_content {
     height: 40px;
+    margin-bottom: -3px;
 }
 
 #sticky_top {
